--- a/application/templates/authorization/login.html
+++ b/application/templates/authorization/login.html
@@ -5,10 +5,13 @@
     <title>Login</title>
 </head>
 <body>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+<div>
+    <form method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit">
+    </form>
+    <small>{{ error }}</small>
+</div>
 </body>
 </html>
