--- a/application/templates/main/index.html
+++ b/application/templates/main/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <script src="{% static "js/main.js" %}"></script>
     <meta charset="UTF-8">
     <title>Main page</title>
 </head>
