--- a/application/templates/main/index.html
+++ b/application/templates/main/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     {% load static %}
+    <script src="{% static "js/jquery-3.2.1.min.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
     <meta charset="UTF-8">
     <title>Main page</title>
@@ -18,6 +19,7 @@
         <small>{{ error }}</small>
     {% else %}
         <h3>{{ checkpoint.name }}</h3>
+        <img src="/stream/">
     {% endif %}
 </div>
 </body>
