[add] Stream to main page

--- a/application/templates/main/main.html
+++ b/application/templates/main/main.html
@@ -10,7 +10,12 @@
 <body>
 <div>
     <h3>{{ checkpoint.name }}</h3>
-    <img src="/stream/">
+    <div>
+        <img src="/stream/">
+    </div>
+    <div>
+        <button onclick="window.location.href='/plate'">Add/Remove plates</button>
+    </div>
 </div>
 </body>
 </html>
