--- a/application/templates/authorization/login.html
+++ b/application/templates/authorization/login.html
@@ -11,10 +11,21 @@
 <body>
 <div>
     <form id="login_form" method="post">
-        <input name="username">
-        <input name="password">
-        <input type="submit" value="Sign In">
-        <small id="error"></small>
+        <div class="form-row align-items-center">
+            <div class="col-sm-3 my-1">
+                <label class="sr-only" for="username">Name</label>
+                <input type="text" class="form-control" id="username" placeholder="Username">
+            </div>
+            <div class="col-sm-3 my-1">
+                <label class="sr-only" for="password">Name</label>
+                <input type="password" class="form-control" id="password" placeholder="Password">
+            </div>
+            <div class="col-auto my-1">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+            <div id="error" class="alert-danger">
+            </div>
+        </div>
     </form>
 </div>
 </body>
