[change] Change UI and logic with camera

--- a/application/templates/main/main.html
+++ b/application/templates/main/main.html
@@ -8,7 +8,6 @@
     <title>Main page</title>
 </head>
 <body>
-<h3>{{ checkpoint.name }}</h3>
 <div class="container">
     <div class="row">
         <div class="kits col-sm">
@@ -18,7 +17,7 @@
     <div class="row">
         <div class="kits col-sm-6 mt-3">
             <h3>Camera: </h3>
-            <img src="/stream/" alt="Camera is not connected">
+            <img width="100%" src="/stream/" alt="Camera is not connected">
         </div>
         <div class="kits col-sm-6 mt-3">
             <h3>History: </h3>
