--- a/application/templates/blocks/head.html
+++ b/application/templates/blocks/head.html
@@ -2,5 +2,5 @@
 <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
 <script src="{% static 'js/source/jquery-3.2.1.min.js' %}"></script>
 <script src="{% static 'js/server.js' %}"></script>
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/source/bootstrap.min.css' %}">
 <script src="{% static 'js/source/bootstrap.min.js' %}"></script>
