--- a/application/templates/blocks/navigation.html
+++ b/application/templates/blocks/navigation.html
@@ -1,12 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/kit">Kits</a>
-            </li>
-        </ul>
-    </div>
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+
+    </ul>
+    <ul class="navbar-nav mx-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="/kit">Kits</a>
+        </li>
+    </ul>
 </nav>
