--- a/application/templates/kit/kit.html
+++ b/application/templates/kit/kit.html
@@ -6,17 +6,18 @@
     {% load static %}
     {% include "blocks/head.html" %}
     <script src="{% static 'js/kit/kit.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/kit/kit.css' %}">
 </head>
 <body>
 <div class="container">
     <div class="row">
-        <div class="kits col-sm-12">
+        <div class="kits col-sm">
             {% include "blocks/navigation.html" %}
         </div>
     </div>
 
     <div class="row">
-        <div class="kits col-6" style="min-wight: 300px">
+        <div class="kits col-sm-7" style="min-wight: 300px">
             <table class="table">
                 <tr>
                     <th scope="col">Name</th>
@@ -51,7 +52,7 @@
                 {% endfor%}
             </table>
         </div>
-        <div class="create-kit col-6  ml-5" style="min-wight: 300px">
+        <div class="create-kit col-sm-5" style="min-wight: 300px">
             <h4>Create new kit:</h4>
             <form id="create_form">
                 <label>
@@ -60,12 +61,12 @@
                 </label>
                 <label>
                     Active:
-                    <input type="checkbox" name="kit_active">
+                    <input type="checkbox" class="checkbox" name="kit_active" checked>
                 </label>
                 <button type="submit" class="btn btn-primary">Create</button>
             </form>
         </div>
-        <div class="edit-kit col-6  ml-5" style="min-wight: 300px">
+        <div class="edit-kit col-sm-5" style="min-wight: 300px">
             <h4>Edit <span id="name_of_editing_kit"></span>:</h4>
             <form id="edit_form">
                 <label>
@@ -74,7 +75,7 @@
                 </label>
                 <label>
                     Active:
-                    <input id="edit_form_kit_active" type="checkbox" name="kit_active">
+                    <input id="edit_form_kit_active" type="checkbox" class="checkbox" name="kit_active">
                 </label>
                 <button type="submit" class="btn btn-primary">Save</button>
                 <button class="btn btn-danger" id="cancel_edition">Cancel</button>
