--- a/application/templates/blocks/navigation.html
+++ b/application/templates/blocks/navigation.html
@@ -1,13 +1,18 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <ul class="navbar-nav mx-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="/">Home</a>
-        </li>
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/blocks/navigation.css' %}">
+<div class="navigation">
+    <nav class="navbar navbar-light">
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/">Home</a>
+            </li>
 
-    </ul>
-    <ul class="navbar-nav mx-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="/kit">Kits</a>
-        </li>
-    </ul>
-</nav>
+        </ul>
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/kit">Kits</a>
+            </li>
+        </ul>
+    </nav>
+</div>
+<script src="{% static 'js/blocks/navigation.js' %}"></script>
