--- a/application/templates/plate/plate.html
+++ b/application/templates/plate/plate.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="row">
-        <div class="plates label col-sm-5">
+        <div class="plates label col-sm-6">
             <table class="table">
                 <tr>
                     <th scope="col">Name</th>
@@ -43,7 +43,7 @@
                 {% endfor%}
             </table>
         </div>
-        <div class="create-plate col-sm-6 ml-5">
+        <div class="create-plate col-sm-5">
             <h4>Create new licence plate:</h4>
             <form id="create_form">
                 <label>
